[tool.poetry]
name = "repl_python3_Mania-Bot-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
Flask = {extras = ["async"], version = "^2.0.1"}
nextcord = "^2.0.0-alpha.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
